unpackaged/main/default/objects/WC_Buy_Rate__c/WC_Buy_Rate__c.object-meta.xml
<CustomObject>
    <label>WC Buy Rate</label>
    <nameField>
        <displayFormat>WC Buy Rate - {000}</displayFormat>
        <label>WC Buy Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WC Buy Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>