unpackaged/main/default/objects/WC_Buy_Rate__c/fields/Broker_Tier__c.field-meta.xml
<CustomField>
    <fullName>Broker_Tier__c</fullName>
    <label>Broker Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
                <default>true</default>
                <label>Tier 2</label>
            </value>
            <value>
                <fullName>Tier 1 Special</fullName>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>