unpackaged/main/default/objects/WC_Buy_Rate__c/fields/Daily_11_Month_Term__c.field-meta.xml
<CustomField>
    <fullName>Daily_11_Month_Term__c</fullName>
    <defaultValue>1.27</defaultValue>
    <description>4/30/2018 - Previous value 1.29, 1/1/2019 - Previous Value 1.25</description>
    <label>Daily 11 Month Term</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>