unpackaged/main/default/objects/WC_Buy_Rate__c/fields/Daily_12_Month_Term__c.field-meta.xml
<CustomField>
    <fullName>Daily_12_Month_Term__c</fullName>
    <defaultValue>1.28</defaultValue>
    <description>4/30/2018 - Previous value 1.30, 1/1/2019 - previous value 1.26</description>
    <label>Daily 12 Month Term</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>