unpackaged/main/default/objects/WC_Buy_Rate__c/fields/Daily_13_Month_Term__c.field-meta.xml
<CustomField>
    <fullName>Daily_13_Month_Term__c</fullName>
    <defaultValue>1.3</defaultValue>
    <description>4/30/2018 - Previous value 1.32, 1/1/2019 - 1.28</description>
    <label>Daily 13 Month Term</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>