unpackaged/main/default/objects/WC_Buy_Rate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
                <default>true</default>
                <label>Broker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>